# serializer version: 1
# name: TestHalfCheetahCostEqual.test_snapshot
  -0.0122243120495895
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.1
  0.0717195839822765
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.10
  0.0777791935428948
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.100
  -0.1790805859763481
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.101
  -0.6212294793517181
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.102
  -0.3906684901968401
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.103
  -1.523971353336832
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.104
  2.394305850680926
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.105
  -5.989641083835947
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.106
  9.530529347674888
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.107
  -2.722407274740522
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.108
  6.966329501727748
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.109
  2.3464246398027298
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.11
  0.0066030697561216
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.110
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.111
  -1.7912004008272207
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.112
  -0.7912004008272207
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.113
  3.2083988759235957
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.114
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.115
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.116
  dict({
    'cost_ctrl': 0.0002354202032089,
    'cost_velocity': 3.2083988759235957,
    'x_position': -0.0168370793395109,
    'x_velocity': -0.7912004008272207,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.117
  -0.1245485334980939
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.118
  -0.0257137472223512
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.119
  0.3559939676627254
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.12
  0.1127241206968033
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.120
  0.0067717157444868
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.121
  0.1253929307607248
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.122
  -0.4530025409526497
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.123
  0.0220346294113967
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.124
  0.1432576316910528
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.125
  -0.165669422408253
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.126
  0.1745841779109427
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.127
  2.861020828424744
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.128
  1.2959991241860132
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.129
  -6.7111759673482645
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.13
  0.0467509342252046
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.130
  -4.075213459534094
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.131
  -3.2094301356235517
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.132
  -10.886497949362548
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.133
  7.281018089359992
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.134
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.135
  -1.2549168211662851
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.136
  -0.2549168211662851
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.137
  1.574816228046094
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.138
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.139
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.14
  -0.0859292462883238
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.140
  dict({
    'cost_ctrl': 0.0002131952524185,
    'cost_velocity': 1.574816228046094,
    'x_position': -0.0295829203978251,
    'x_velocity': -0.2549168211662851,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.15
  0.0368750784082499
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.16
  -0.0958882600828999
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.17
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.18
  -1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.19
  0.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.2
  0.0394736058118728
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.20
  dict({
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.21
  -0.0298663646269634
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.22
  0.0763528093578848
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.23
  0.1569817352601035
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.24
  -0.1149125329341098
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.25
  0.28095868622709
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.26
  0.2217913064160838
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.27
  -0.2907833210526689
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.28
  0.2474379681000924
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.29
  0.3241605163146541
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.3
  -0.0811645304224701
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.30
  -0.6264623227604865
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.31
  -0.0249154385961364
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.32
  3.2190612683933004
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.33
  -0.4561315353562574
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.34
  4.529667805541006
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.35
  4.081167405359173
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.36
  -8.261650910871076
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.37
  8.781504182819518
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.38
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.39
  -0.7694881863290486
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.4
  0.0951244703273512
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.40
  0.2305118136709514
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.41
  0.5921120688999686
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.42
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.43
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.44
  dict({
    'cost_ctrl': 0.0002548972129822,
    'cost_velocity': 0.5921120688999686,
    'x_position': 0.0663168003947402,
    'x_velocity': 0.2305118136709514,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.45
  -0.0770702540037482
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.46
  0.0266688627806301
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.47
  0.2848368619083788
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.48
  0.1945370476301911
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.49
  -0.1574191080156087
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.5
  0.0522279403980706
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.50
  0.1356985734954888
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.51
  -0.2795610438590243
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.52
  0.541750624674746
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.53
  -0.2650591492794566
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.54
  -1.0928018141487887
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.55
  -1.1610168205906501
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.56
  2.3001047514992754
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.57
  7.516875686967678
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.58
  -12.063398855021548
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.59
  -4.24322714295268
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.6
  0.0572128610553908
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.60
  4.251792379477341
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.61
  -0.5224426462462581
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.62
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.63
  -1.0592471867085425
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.64
  -0.0592471867085426
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.65
  1.1220046025499617
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.66
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.67
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.68
  dict({
    'cost_ctrl': 0.0001958436965942,
    'cost_velocity': 1.1220046025499617,
    'x_position': 0.0633544410593131,
    'x_velocity': -0.0592471867085426,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.69
  -0.1155247014225736
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.7
  -0.0743772734648908
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.70
  -0.027285689061942
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.71
  0.2402573497094516
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.72
  0.4513826365584502
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.73
  -0.2643086395990012
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.74
  -0.1453566443448924
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.75
  -0.0075720068267294
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.76
  0.018442937262636
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.77
  -1.1549401878628935
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.78
  -0.273740253314857
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.79
  -1.5737471692480973
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.8
  -0.085304392757358
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.80
  -2.1386079246239853
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.81
  2.649014740643151
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.82
  2.950270415254381
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.83
  -3.159400622952283
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.84
  2.0276044550317565
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.85
  -13.829202390798548
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.86
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.87
  -1.8126300071492587
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.88
  -0.8126300071492589
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.89
  3.2856275428179225
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.9
  0.0879397974862829
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.90
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.91
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.92
  dict({
    'cost_ctrl': 0.0001582831144333,
    'cost_velocity': 3.2856275428179225,
    'x_position': 0.0227229407018502,
    'x_velocity': -0.8126300071492589,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.93
  -0.1290411613823614
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.94
  -0.1018196925754262
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.95
  0.2876863027724879
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.96
  0.2513647523582115
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.97
  0.1921294487378943
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.98
  -0.3243471283503268
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.99
  0.3178033634891464
# ---
